force-app/main/default/objects/Dummy28__c/Dummy28__c.object-meta.xml
<CustomObject>
    <label>Dummy28</label>
    <nameField>
        <label>Dummy28 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy28</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>