force-app/main/default/objects/Dummy28__c/fields/FooBar013__c.field-meta.xml
<CustomField>
    <fullName>FooBar013__c</fullName>
    <label>FooBar013</label>
    <length>255</length>
    <type>Text</type>
</CustomField>