force-app/main/default/objects/Dummy28__c/fields/FooBar069__c.field-meta.xml
<CustomField>
    <fullName>FooBar069__c</fullName>
    <label>FooBar069</label>
    <length>255</length>
    <type>Text</type>
</CustomField>