force-app/main/default/objects/Dummy28__c/fields/FooBar153__c.field-meta.xml
<CustomField>
    <fullName>FooBar153__c</fullName>
    <label>FooBar153</label>
    <length>255</length>
    <type>Text</type>
</CustomField>